clusters/mac-mini/apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-service
  namespace: homelab
spec:
  selector:
    app: vaultwarden
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: websocket
      protocol: TCP
      port: 3012
      targetPort: 3012
